# SudokuSage

./: .gitignore  README.md  app.py  db_driver.py  paper.tex  pyproject.toml  requirements.txt  test_db.ipynb  todo
.ipynb_checkpoints/: main-checkpoint.py
backend/: utils.py
backend/api/: ai.py  analytics.py  board.py  config.py  routes_ai.py  routes_analytics.py  routes_board.py
backend/config/: hints.py
backend/database/: db_driver.py  sudoku.db  utils_board_encoding.py
backend/prompts/: parse_hint.md  system.md
backend/services/: ai.py  ai_service.py  analytics.py  analytics_service.py  board.py  board_service.py  hints.py
frontend/static/css/: board.css  buttons.css  custom.css  response.css
frontend/static/js/: analytics.js  board.js  response.js  typewriter.js  walkthrough.js
frontend/templates/: analytics.html  index.html
sudoku-logic/: board.py  rules.py
sudokusage_eval/: cli.py
sudokusage_eval/metrics/: validity.py
sudokusage_eval/runners/: sample.py
