[project]
name = "csc5240-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiosignal==1.4.0",
    "annotated-doc==0.0.3",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "attrs==25.4.0",
    "certifi==2025.10.5",
    "colorama==0.4.6",
    "distro==1.9.0",
    "dotenv==0.9.9",
    "fastapi==0.121.0",
    "frozenlist==1.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jinja2>=3.1.6",
    "jiter==0.11.1",
    "multidict==6.7.0",
    "numpy==2.3.4",
    "openai==2.6.1",
    "propcache==0.4.1",
    "py-sudoku>=2.0.0",
    "pydantic==2.12.3",
    "pydantic-core==2.41.4",
    "pygame==2.6.1",
    "python-dotenv==1.2.1",
    "sniffio==1.3.1",
    "starlette==0.49.3",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn[standard]>=0.38.0",
    "yarl==1.22.0",
]
